# N-Body-Simulator

./: CMakeLists.txt  README.md  camera.h  glad.h  rectangle.h  triangle.h
include/: notes
include/GLFW/: glfw3.h
include/glad/: glad.c
include/glm/gtc/: integer.hpp
include/glm/gtx/: matrix_decompose.inl  matrix_factorisation.inl  norm.hpp  pca.hpp
src/: NBodySimulator.h  camera.h  main.cpp  shader.h  shape.h  sphere.h  world.h
